# sosai

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  features.md  index.html  pyproject.toml
.github/workflows/: pages.yml
sosai/: __init__.py  cli.py  config.py
sosai/benchmarks/: __init__.py  resolver.py
sosai/ir/: __init__.py  engine.py
sosai/network/: __init__.py  review.py  submit.py  tier.py
under_review/: SOSAI-2026-4BA155.md
